css/main.css
/* Ubuntu-ish Colour theme
   Dark brown - #332532
   Light brown - #644D52
   Peach - #F77A52
   sunshine - #FF974F
   grey blue - #A49A87
 */

 /* alternative theme including white
  offwhite - #f8f8f8
  cream - #f2e5bd
  apple - #b9bf83
  pear - #a69f7c
  chocolate - #8c6865
  black - #000000
 */

 /* lavender theme including white
  purple - #6765AD
  blue - #8FB0FF
  offwhite - #F8F8F8
  lightgreen - #89B28A
  darkgreen - #577043
  nearly black -#292929
 */

 /* scheme picked from image
 light blue 199 217 236 #C7D9EC
 navy blue  75 87 134  #4b5786
 desaturated blue 86 129 178 #96b1cf
 mid blue 144 189 230 #90bde6
 really dark blue 23, 55, 94 #17375e
 orange 249 166 74 #f9a64a
 dark brown 162 83 55 #a25337
nearly black #292929
 */

:root {
    --white: #f8f8f8;
    --violet: #f2f2ff;
    --blueish: #e0f0ff;

    --green: green;
    --blue: #559eff;
    --dodgerblue: dodgerblue;
    --orange: orange;
    --red: red;
    --black: black;

    --verywhite: #d4d4d4;
    --lightblack: #222222;

    --paleblue: #96b1cf;
    --darkpaleblue: #768190;

    --grey: gray;
    --verydarkgrey: #393939;
    --darkgrey: #dddddd;
    --lightgrey: #eaeaea;
    --almostgrey: #bbbbbb;
    --quasiblack: #292929;

    --almostwhite: #eeeeee;
    --bluetext: #17375e;
    --greytext: #4b5786;

    --almostblue: #879ced;

    --yellow: yellow;

    --mainImage: url("/img/misc/background.png");
    --darkImage: url("/img/misc/background-dark.png")
}

.light-theme {
    --normal: var(--black);
    --background: var(--white);
    --tralternatebase: var(--white);
    --tralternate: var(--violet);
    --hover: var(--blueish);
    --headingtext: var(--bluetext);
    --activetext: var(--greytext);
    --navbackground: var(--paleblue);
    --selectedhover: var(--almostblue);
    --headerbaground: var(--lightgrey);
    --normaltext: var(--quasiblack);
    --autocomplete: var(--verywhite);

    --asuccess: var(--green);
    --anormal: var(--blue);
    --ainfo: var(--dodgerblue);
    --awarning: var(--orange);
    --adanger: var(--red);
    --adefault: var(--black);

    --slider: var(--yellow);
    --backgroundImage: var(--mainImage);
}

.dark-theme {
    --normal: var(--darkgrey);
    --background: var(--lightblack);
    --tralternatebase: var(--verydarkgrey);
    --tralternate: var(--grey);
    --hover: var(--almostgrey);
    --headingtext: var(--white);
    --activetext: var(--almostwhite);
    --navbackground: var(--darkpaleblue);
    --selectedhover: var(--almostblue);
    --headerbaground: var(--quasiblack);
    --normaltext: var(--white);
    --autocomplete: var(--verywhite);

    --asuccess: var(--green);
    --anormal: var(--blueish);
    --ainfo: var(--violet);
    --awarning: var(--orange);
    --adanger: var(--red);
    --adefault: var(--white);

    --slider: var(--navbackground);
    --backgroundImage: var(--darkImage);
}

/* reset all margins and padding*/
 * {
    margin: 0;
    padding: 0;
    font-family: 'Rosario', sans-serif; !important;
}

body {
    background-color: var(--background);
    color: var(--normal);
}

table {
    border-collapse: collapse;
    margin: 0 10px 0 10px;
}

th, td {
    text-align: left;
    padding: 4px;
}

tr:nth-child(even) {
    background-color: var(--tralternate);
}

tr:nth-child(odd) {
    background-color: var(--tralternatebase);
}

tr:hover {
    background-color: var(--hover);
}

tr:nth-child(even).no-hover:hover{
    background-color: var(--tralternate);
}

tr:nth-child(odd).no-hover:hover{
    background-color: var(--background);
}

th.wrap {
    white-space;
    text-overflow: ellipsis;
    overflow: hidden;
    max-width: 354px;
}

table.searchResults {
    float: left;
    min-width:360px;
}

table.setValue {
    border-collapse: collapse;
    table-layout: fixed;
    width: 95%;
}

tr.setValue {
    background-color: rgba(0, 0, 0, 0.0) !important;
}

td.setValue {
    width: 65%;
    white-space: nowrap;
}

td.fullAnchor a {
    display: block;
    width: 100%;
}

td img {
    vertical-align: top;
}


tr.setValue:hover {
    background-color: rgba(0, 0, 0, 0.0) !important;
}

h1 {
    color: var(--headingtext);
    margin-left: 20px;
    margin-top: 20px;
    margin-bottom: 10px
}

p {
    color: var(--normaltext);
    margin-left: 20px;
    margin-bottom: 20px;
}

.buildcart {
    float: left;
}

.btn {
    border: none;
    background-color: inherit;
    padding: 4px 8px;
    font-size: 16px;
    cursor: pointer;
    display: inline-block;
}

.btn:hover {
    text-decoration: underline;
}

.success {color: var(--asuccess);}
.normal {color: var(--anormal);}
.info {color: var(--ainfo);}
.warning {color: var(--awarning);}
.danger {color: var(--adanger);}
.default {color: var(--adefault);}

a {
    color: var(--ainfo);
    text-decoration: none;
}

a.pagination {
    color: black;
    text-decoration: none;
}

nav ul {
    list-style-type: none;
    margin: 0;
    padding: 0;
    overflow: hidden;
    background-color: var(--navbackground);
    position: fixed;
    top: 0;
    width: 100%;
    height: 48px;
    z-index: 100;
}

nav li {
    float: left;
    border-right: 1px solid var(--greytext);
}

nav li.optional {
    border-right: none;
}

nav li:last-child {
    float: right;
    color:  var(--activetext);
    text-align: center;
    padding: 14px;
    font-style: italic;
}

nav li a {
    display: inline-block;
    color:  var(--activetext);
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
}

nav li:first-child a {
    display: inline-block;
    padding: 0;
}

nav li:nth-child(2) a {
    display: inline-block;
    padding: 0;
}

nav li a:hover {
    color: var(--background);
}

.index ol {
    padding: 14px 16px;
}

.index li {
    float: left;
    padding: 4px 8px;
    margin: 4px 20px;
}


.active {
    background-color: var(--background);
    color: var(--activetext);
}
a.active:hover{
    color: var(--activetext);
}

.selected {
    background-color: var(--activetext);
    color: var(--background);
}
a.selected:hover{
    color: var(--selectedhover);
}

#container{width: 900px;}
#left{float: left; width: 215px;}
#right{float: right; width: 215px;}
#center{margin: 0 auto; width: 215px;}

.bg{
    height: 480px;
    background-image: var(--backgroundImage);
    background-repeat: no-repeat;
    background-color: var(--background);
}
.mainbody{
    padding-top: 75px;
}

.indent{
    margin-left: 30px;
}

.footer {
    color: var(--activetext);
    margin-left: 20px;
}

/* from https://www.w3schools.com/w3css/4/w3.css */
.w3-input{
    padding: 8px;
    display: block;
    border: none;
    border-bottom: 1px solid #ccc;
    width: 100%;
}
.search-input{
    font-size: 16px;
}

.w3-border-0{
    border: 0!important
}

.w3-border{
    border: 1px solid #ccc!important
}
.w3-round-small{
    border-radius: 2px
}
.w3-round,
.w3-round-medium{
    border-radius: 4px
}
.w3-round-large{
    border-radius: 8px
}
.w3-round-xlarge{
    border-radius: 16px
}
.w3-round-xxlarge{
    border-radius: 32px
}

.w3-animate-input{
    transition:width 0.4s ease-in-out
}
.w3-animate-input:focus{
    width: 100%!important
}

.search {
    padding: 8px 8px;
    display: inline-block;
    width: 350px;
}

.sticky {
    position: -webkit-sticky;
    position: sticky;
    z-index: 2;
}

th.stickyCategory {
    position: -webkit-sticky;
    position: sticky;
    top: 48px;
    background-color: var(--background);
}

th.stickyHeader {
    position: -webkit-sticky;
    position: sticky;
    top: 84px;
    background-color: var(--headerbaground);
    height: 40px;
    z-index: 1;
}

th.stickyHeaderTiny {
    position: -webkit-sticky;
    position: sticky;
    top: 72px;
    background-color: var(--headerbaground);
    z-index: 1;
}

th.stickyHeaderShort {
    position: -webkit-sticky;
    position: sticky;
    top: 48px;
    background-color: var(--headerbaground);
    z-index: 1;
}

th a {
    color: var(--normal);
    text-decoration: none;
}

.center {
    display: block;
    margin-left: auto;
    margin-right: auto;
    width: 50%;

    top: 50%;
    -ms-transform: translateY(10%);
    transform: translateY(10%);
}

.autocomplete {
    /* The container must be positioned relative */
    position: relative;
    display: inline-block;
}
.autocomplete-items {
    position: absolute;
    border: 1px solid var(--verywhite);
    border-bottom: none;
    border-top: none;
    z-index: 99;

    /* Position the autocomplete items to be the same width as the container */
    top: 100%;
    left: 0;
    right: 0;

    /* Adjust the offsets brought by the container element */
    margin-left: 8px;
    margin-top: -8px;
    margin-right: -10px;
}
.autocomplete-items div {
    padding: 10px;
    cursor: pointer;
    background-color: var(--almostwhite);
    border-bottom: 1px solid var(--verywhite);
    color: black;
}
/* when hovering an item */
.autocomplete-items div:hover {
    background-color: var(--hover);
}
/* when navigating through the items using the arrow keys */
.autocomplete-active {
    background-color: var(--navbackground) !important;
    color: #ffffff;
}

pre {
  display: inline-block;
  font-family: monospace;
  white-space: pre;
}

h3.storename {
    color: var(--ainfo);
}
.anchor{
    display: block;
    position: relative;
    top: -48px;
    visibility: hidden;
}

span {
    line-height: 1;
}

span.emoji {
    font-size: 24px;
    text-align: center;
    vertical-align: middle;
    line-height: 1;
}

/* Hide short text by default */
.short-text {
    display: none;
}

/* For samll resolutions, hide full text and show short text */
@media (max-width: 1550px) {
    .short-text {
        display: inline-block;
    }
    .full-text {
        display: none;
    }
}

table.tiers {
    margin: 10px;
}

tr.tiers{
    background-color: #1a1a1a;
    vertical-align: middle;
}

td.tiers {
    min-width: 50px;
    text-align: center;
    font-size: 24px;
    margin: auto;
}

.select-css {
    display: inline;
    font-size: 16px;
    font-weight: 700;
    color: var(--headingtext);
    line-height: 1.3;
    padding: .6em 0em .5em .8em;
    width: 100%;
    max-width: 100%;
    box-sizing: border-box;
    border: 1px solid #aaa;
    border-radius: .2em;
    -moz-appearance: none;
    -webkit-appearance: none;
    appearance: none;
    background-color: var(--tralternate);
}
.select-css::-ms-expand {
    display: none;
}
.select-css:hover {
    border-color: #888;
}
.select-css:focus {
    border-color: #aaa;
    color: var(--headingtext);

    outline: none;
}

.select-css option {
    font-weight: normal;
}

.switch {
    width: 55px;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.switch div {
    position: relative;
    display: block;
    background: var(--yellow);
    width: 18px;
    border-radius: 50px;
    padding: 0 0;
    box-sizing: border-box;
    cursor: pointer;
}

.fa-adjust {
    transform: rotate(180deg);
}

.switch input {
    display: none;
}

.slider {
    background-color: var(--slider);
    transition: 0.4s;
    border-radius: 34px;
    height: 12px;
    width: 12px;
    display: inline-block;
    position: relative;
}

input:checked + .slider {
    transform: translateX(4px);
}

